@@ -1,5 +1,5 @@
 // -*- mode:objc -*-
-// $Id: VT100Screen.m,v 1.213 2006-02-02 08:07:59 yfabian Exp $
+// $Id: VT100Screen.m,v 1.214 2006-02-02 22:41:39 yfabian Exp $
 //
 /*
  **  VT100Screen.m
@@ -221,8 +221,8 @@ void padString(NSString *s, unichar *buf, char doubleWidth, int *len)
 		bfg=(char*)malloc(scrollbackLines*width*sizeof(char));
 		bbg=(char*)malloc(scrollbackLines*width*sizeof(char));
 		memset(bl, 0, width*scrollbackLines*sizeof(unichar));
-		memset(bfg, DEFAULT_FG_COLOR_CODE, width*scrollbackLines*sizeof(char));
-		memset(bbg, DEFAULT_BG_COLOR_CODE, width*scrollbackLines*sizeof(char));
+		memset(bfg, [TERMINAL foregroundColorCode], width*scrollbackLines*sizeof(char));
+		memset(bbg, [TERMINAL backgroundColorCode], width*scrollbackLines*sizeof(char));
 		
 		sw=width<WIDTH?width:WIDTH;
 		for(i=0;i<scrollbackLines;i++) {
@@ -244,8 +244,8 @@ void padString(NSString *s, unichar *buf, char doubleWidth, int *len)
 	sbg=(char*)malloc(height*width*sizeof(char));
 	
 	memset(sl, 0, width*height*sizeof(unichar));
-	memset(sfg, DEFAULT_FG_COLOR_CODE, width*height*sizeof(char));
-	memset(sbg, DEFAULT_BG_COLOR_CODE, width*height*sizeof(char));
+	memset(sfg, [TERMINAL foregroundColorCode], width*height*sizeof(char));
+	memset(sbg, [TERMINAL backgroundColorCode], width*height*sizeof(char));
 
 	// copy the screen content
 	sw=width<WIDTH?width:WIDTH;
@@ -337,8 +337,8 @@ void padString(NSString *s, unichar *buf, char doubleWidth, int *len)
 		bfg=(char*)malloc(lines*WIDTH*sizeof(char));
 		bbg=(char*)malloc(lines*WIDTH*sizeof(char));
 		memset(bl, 0, WIDTH*lines*sizeof(unichar));
-		memset(bfg, DEFAULT_FG_COLOR_CODE, WIDTH*lines*sizeof(char));
-		memset(bbg, DEFAULT_BG_COLOR_CODE, WIDTH*lines*sizeof(char));
+		memset(bfg, [TERMINAL foregroundColorCode], WIDTH*lines*sizeof(char));
+		memset(bbg, [TERMINAL backgroundColorCode], WIDTH*lines*sizeof(char));
 		
 		if (bufferLines) {
 			if (lines<scrollbackLines) { //new buffer smaller
@@ -581,8 +581,8 @@ void padString(NSString *s, unichar *buf, char doubleWidth, int *len)
 				screenLines[i]='E';
 		}
 		memset(dirty,1,HEIGHT*WIDTH);
-		memset(screenFGColor,DEFAULT_FG_COLOR_CODE,HEIGHT*WIDTH);
-		memset(screenBGColor,DEFAULT_BG_COLOR_CODE,HEIGHT*WIDTH);
+		memset(screenFGColor,[TERMINAL foregroundColorCode],HEIGHT*WIDTH);
+		memset(screenBGColor,[TERMINAL backgroundColorCode],HEIGHT*WIDTH);
 		break;
     case VT100CSI_DECDHL: break;
     case VT100CSI_DECDWL: break;
@@ -750,8 +750,8 @@ void padString(NSString *s, unichar *buf, char doubleWidth, int *len)
 
 	if (bufferLines) {
 		memset(bufferLines,0,scrollbackLines*WIDTH*sizeof(unichar));
-		memset(bufferFGColor,DEFAULT_FG_COLOR_CODE,scrollbackLines*WIDTH*sizeof(char));
-		memset(bufferBGColor,DEFAULT_BG_COLOR_CODE,scrollbackLines*WIDTH*sizeof(char));
+		memset(bufferFGColor,[TERMINAL foregroundColorCode],scrollbackLines*WIDTH*sizeof(char));
+		memset(bufferBGColor,[TERMINAL backgroundColorCode],scrollbackLines*WIDTH*sizeof(char));
 	}
 	
 	bufferWrapped = lastBufferLineIndex = 0;
@@ -932,8 +932,8 @@ void padString(NSString *s, unichar *buf, char doubleWidth, int *len)
 
 		// set last blank line to default
 		memset(screenLines+WIDTH*(HEIGHT-1),0,WIDTH*sizeof(unichar));
-		memset(screenFGColor+WIDTH*(HEIGHT-1),DEFAULT_FG_COLOR_CODE,WIDTH*sizeof(char));
-		memset(screenBGColor+WIDTH*(HEIGHT-1),DEFAULT_BG_COLOR_CODE,WIDTH*sizeof(char));
+		memset(screenFGColor+WIDTH*(HEIGHT-1),[TERMINAL foregroundColorCode],WIDTH*sizeof(char));
+		memset(screenBGColor+WIDTH*(HEIGHT-1),[TERMINAL backgroundColorCode],WIDTH*sizeof(char));
 		memset(dirty,1,WIDTH*HEIGHT*sizeof(char));
     }
     else {
@@ -992,8 +992,8 @@ void padString(NSString *s, unichar *buf, char doubleWidth, int *len)
     NSLog(@"%s(%d):-[VT100Screen clearScreen]", __FILE__, __LINE__);
 #endif
 	memset(screenLines,0,HEIGHT*WIDTH*sizeof(unichar));
-	memset(screenFGColor,DEFAULT_FG_COLOR_CODE,HEIGHT*WIDTH*sizeof(char));
-	memset(screenBGColor,DEFAULT_BG_COLOR_CODE,HEIGHT*WIDTH*sizeof(char));
+	memset(screenFGColor,[TERMINAL foregroundColorCode],HEIGHT*WIDTH*sizeof(char));
+	memset(screenBGColor,[TERMINAL backgroundColorCode],HEIGHT*WIDTH*sizeof(char));
 	memset(dirty,1,HEIGHT*WIDTH*sizeof(char));
 
 	CURSOR_X = CURSOR_Y = 0;
@@ -1058,8 +1058,8 @@ void padString(NSString *s, unichar *buf, char doubleWidth, int *len)
 	
 	memset(screenLines+idx1,0,(idx2-idx1)*sizeof(unichar));
 	// give default foreground and background colors
-	memset(screenFGColor+idx1,DEFAULT_FG_COLOR_CODE,(idx2-idx1)*sizeof(char));
-	memset(screenBGColor+idx1,DEFAULT_BG_COLOR_CODE,(idx2-idx1)*sizeof(char));
+	memset(screenFGColor+idx1,[TERMINAL foregroundColorCode],(idx2-idx1)*sizeof(char));
+	memset(screenBGColor+idx1,[TERMINAL backgroundColorCode],(idx2-idx1)*sizeof(char));
 	memset(dirty+idx1,1,(idx2-idx1)*sizeof(char));
 }
 
@@ -1090,18 +1090,22 @@ void padString(NSString *s, unichar *buf, char doubleWidth, int *len)
 	}
 	idx=CURSOR_Y*WIDTH+x1;
 	memset(screenLines+idx,0,(x2-x1)*sizeof(unichar));
+	
+	// I'm commenting out the following code. I'm not sure about OpenVMS, but this code produces wrong result
+	// when I use vttest program for testing the color features. --fabian
+	
 	// if we erasing entire lines, set to default foreground and background colors. Some systems (like OpenVMS)
 	// do not send explicit video information
-	if(x1 == 0 && x2 == WIDTH)
-	{
-		fgCode = DEFAULT_FG_COLOR_CODE;
-		bgCode = DEFAULT_BG_COLOR_CODE;
-	}
-	else
-	{
+	//if(x1 == 0 && x2 == WIDTH)
+	//{
+	//	fgCode = DEFAULT_FG_COLOR_CODE;
+	//	bgCode = DEFAULT_BG_COLOR_CODE;
+	//}
+	//else
+	//{
 		fgCode = [TERMINAL foregroundColorCode];
 		bgCode = [TERMINAL backgroundColorCode];
-	}
+	//}
 	memset(screenFGColor+idx,fgCode,(x2-x1)*sizeof(char));
 	memset(screenBGColor+idx,bgCode,(x2-x1)*sizeof(char));
 	memset(dirty+idx,1,(x2-x1)*sizeof(char));
@@ -1322,8 +1326,8 @@ void padString(NSString *s, unichar *buf, char doubleWidth, int *len)
 	}
 	// new line with default settings
 	memset(screenLines+SCROLL_BOTTOM*WIDTH,0,WIDTH*sizeof(unichar));
-	memset(screenFGColor+SCROLL_BOTTOM*WIDTH,DEFAULT_FG_COLOR_CODE,WIDTH*sizeof(char));
-	memset(screenBGColor+SCROLL_BOTTOM*WIDTH,DEFAULT_BG_COLOR_CODE,WIDTH*sizeof(char));
+	memset(screenFGColor+SCROLL_BOTTOM*WIDTH,[TERMINAL foregroundColorCode],WIDTH*sizeof(char));
+	memset(screenBGColor+SCROLL_BOTTOM*WIDTH,[TERMINAL backgroundColorCode],WIDTH*sizeof(char));
 	memset(dirty+SCROLL_TOP*WIDTH,1,(SCROLL_BOTTOM-SCROLL_TOP+1)*WIDTH*sizeof(char));
 }
 
@@ -1343,8 +1347,8 @@ void padString(NSString *s, unichar *buf, char doubleWidth, int *len)
 	}
 	// new line with default settings
 	memset(screenLines+SCROLL_TOP*WIDTH,0,WIDTH*sizeof(unichar));
-	memset(screenFGColor+SCROLL_TOP*WIDTH,DEFAULT_FG_COLOR_CODE,WIDTH*sizeof(char));
-	memset(screenBGColor+SCROLL_TOP*WIDTH,DEFAULT_BG_COLOR_CODE,WIDTH*sizeof(char));
+	memset(screenFGColor+SCROLL_TOP*WIDTH,[TERMINAL foregroundColorCode],WIDTH*sizeof(char));
+	memset(screenBGColor+SCROLL_TOP*WIDTH,[TERMINAL backgroundColorCode],WIDTH*sizeof(char));
 	memset(dirty+SCROLL_TOP*WIDTH,1,(SCROLL_BOTTOM-SCROLL_TOP+1)*WIDTH*sizeof(char));    
 }
 
